--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,4 +1,14 @@
 <header>
     <h1>CareerCanvas</h1>
-    <a href="/job/new"><button>Add a new application</button></a>
+    <nav>
+        <ul>
+            <li>
+                <a href="/job/new"><button>Add a new application</button></a>
+            </li>
+            <li>
+                <a href="/job"><button>Home</button></a>
+            </li>
+        </ul>
+    
+    </nav>
   </header>
