--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans&family=Poppins&family=Roboto&display=swap');
+
+body{
+    background-color: #f2f0ee;
+
+}
+
 header {
     display: flex;
     padding:2rem;
@@ -9,6 +16,12 @@ header {
     align-items: center;
 }
 
+h1{
+    font-style: 'Inter', sans-serif;
+    text-shadow: #86A3C3;
+    font-weight: bold;
+}   
+
 nav ul {
     display: flex;
     list-style: none;
@@ -19,3 +32,88 @@ nav ul li{
     margin:0;
     margin-left: 1rem;
 }
+
+nav ul li a button {
+    background-color: #86A3C3;
+    border:none;
+}
+
+
+.container{
+    display: flex;
+    padding-top: 5rem;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    border: 5px darkslategray;
+}
+
+.card{
+    display:flex;
+    width: 700px;
+    text-align: center;
+    padding: 10px;
+    justify-content: center;
+}
+
+.card a {
+    display:flex;
+    align-items: center;
+}
+
+.mainPageButton {
+    margin: 0 auto;
+    font-size: 1.5rem;
+    color: whitesmoke;
+    font-style: 'Inter', sans-serif;
+    background-color: #86A3C3;
+    border: none;
+    border-radius: 4rem;
+}
+
+
+/*show.ejs page css*/
+.companyName_firstInterview{
+    text-align: center;
+    padding-top: 5rem;
+}
+
+.companyName_firstInterview h2{
+    font-size: 3.5rem;
+}
+
+
+.frame {
+    width: 400px; /* Adjust the width as needed */
+    height: 200px; /* Adjust the height as needed */
+    border: 3px solid #ccc;
+    border-radius: 10px;
+    overflow: hidden; /* Hides the overflowing content */
+    margin: auto;
+}
+
+.srollable-content {
+    padding: 10px; /* Adjust padding as needed */
+    overflow-y: auto; /* Enables vertical scrolling if content overflows */
+    height: 100%; /* Fills the height of the frame */
+    line-height: 1.5;
+    word-wrap: break-word;
+}
+
+.offer {
+    text-align: center;
+    padding: 20px;
+}
+
+.buttons{
+    display: flex;
+    justify-content: space-around;
+}
+
+.buttons button{
+    background-color: #86A3C3;
+    border:none;
+}
+
+/*edit page.ejs*/
+
