--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,7 +8,7 @@
       <div>
         <form action="/job" method="post">
           <fieldset>
-            <legend>Add a new application</legend>
+            <legend><h2>Add a new application</h2></legend>
             <label
               >Company:<input 
               type="text" 
@@ -42,10 +42,15 @@
             name="offer"
           /></label>
           </fieldset>
-          <button>Add an job</button>
-          <a href="/job"><button>Back to main page</button></a>
+          <div class="new-buttons">
+            <button>Add an job</button>
+          <div>
+            
         </form>
       </div>
+            <div class="new-buttons">
+            <a href="/job"><button>Back to main page</button></a>
+            </div>
     </main>
   </body>
 </html>
