--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,7 +8,7 @@
       <div>
         <form action="/job" method="post">
           <fieldset>
-            <legend><h2>Add a new application</h2></legend>
+            <legend>Add a new application</legend>
             <label
               >Company:<input 
               type="text" 
@@ -42,13 +42,13 @@
             name="offer"
           /></label>
           </fieldset>
-          <div class="new-buttons">
+          <div id="new-buttons">
             <button>Add an job</button>
           <div>
             
         </form>
       </div>
-            <div class="new-buttons">
+            <div id="new-buttons">
             <a href="/job"><button>Back to main page</button></a>
             </div>
     </main>
