--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,7 +3,8 @@
     <nav>
         <ul>
             <li>
-                <a href="/job/new"><button>Add a new application</button></a>
+                <a href="/job/new">
+                <button>Add a new application</button></a>
             </li>
             <li>
                 <a href="/job"><button>Home</button></a>
