file re-structured

--- a/public/styles.css
+++ b/public/styles.css
@@ -136,7 +136,7 @@ legend {
 
 #new-buttons{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 #new-buttons button{
