--- a/views/new.ejs
+++ b/views/new.ejs
@@ -44,13 +44,9 @@
           </fieldset>
           <div id="new-buttons">
             <button>Add an job</button>
-          <div>
-            
+          <div></div>
         </form>
       </div>
-            <div id="new-buttons">
-            <a href="/job"><button>Back to main page</button></a>
-            </div>
     </main>
   </body>
 </html>
