--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,15 @@
 
         <% } %>
       </div>
+      <ul>
+        <li>
+          <a href="/job/new">
+          <button>Add a new application</button></a>
+        </li>
+        <li>
+          <a href="/job"><button>Home</button></a>
+        </li>
+      </ul>
     </main>
   </body>
 </html>
