--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,15 +1,16 @@
 <header>
     <h1>CareerCanvas</h1>
-    <nav>
         <ul>
-            <li>
-                <a href="/job/new">
-                <button>Add a new application</button></a>
-            </li>
-            <li>
-                <a href="/job"><button>Home</button></a>
-            </li>
-        </ul>
-    
-    </nav>
-  </header>
+        <li>
+            <a href="/user/signup"><button>Signup</button></a>
+        </li>
+        <li>
+            <a href="/user/login"><button>Login</button></a>
+        </li>
+        <li>
+            <a href="/user/logout"><button>Logout</button></a>
+        </li>
+        
+        <ul>
+      
+</header>
